--- a/manifest.json
+++ b/manifest.json
@@ -17,8 +17,7 @@
   ],
 
   "background": {
-    "service_worker": "src/background/service-worker.js",
-    "type": "module"
+    "service_worker": "dist/service-worker.js"
   },
 
   "content_scripts": [
@@ -28,7 +27,7 @@
         "https://chatgpt.com/*",
         "https://claude.ai/*"
       ],
-      "js": ["src/content/main.js"],
+      "js": ["dist/content.js"],
       "css": ["assets/styles/inline-ui.css"],
       "run_at": "document_idle",
       "all_frames": false
