--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "description": "Context-aware prompt enhancement for AI chat interfaces",
   "scripts": {
-    "build": "node build/build.js",
-    "watch": "node build/build.js --watch",
+    "build": "node build.js",
     "test": "jest",
     "lint": "eslint src/**/*.js"
   },
@@ -19,6 +18,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "esbuild": "^0.26.0",
     "eslint": "^8.54.0",
     "jest": "^29.7.0"
   },
