feat(aistudio): add support for Google AI Studio platform
Add comprehensive support for Google AI Studio platform including:
- New docking strategy with transparent button styling
- DOM observer selectors for AI Studio elements
- Updated manifest permissions and content script injection
- Enhanced browser compatibility with context validation
- Improved icon handling with zoomed variants
- Better error handling and resource cleanup
- Debounced reattachment logic for better performance

The extension now detects and integrates seamlessly with AI Studio's
interface, providing prompt enhancement functionality consistent with
other supported platforms.

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
     "https://claude.ai/*",
     "https://gemini.google.com/*",
     "https://generativelanguage.googleapis.com/*",
-    "https://www.perplexity.ai/*"
+    "https://www.perplexity.ai/*",
+    "https://aistudio.google.com/*"
   ],
 
   "background": {
@@ -29,7 +30,8 @@
         "https://chatgpt.com/*",
         "https://claude.ai/*",
         "https://gemini.google.com/*",
-        "https://www.perplexity.ai/*"
+        "https://www.perplexity.ai/*",
+        "https://aistudio.google.com/*"
       ],
       "js": ["dist/content.js"],
       "css": ["assets/styles/inline-ui.css"],
@@ -41,8 +43,9 @@
   "action": {
     "default_popup": "src/popup/popup.html",
     "default_icon": {
-      "16": "assets/icons/icon-16.png",
-      "48": "assets/icons/icon-48.png",
+      "16": "assets/icons/icon-16-zoomed.png",
+      "32": "assets/icons/icon-32-zoomed.png",
+      "48": "assets/icons/icon-48-zoomed.png",
       "128": "assets/icons/icon-128.png"
     }
   },
