--- a/manifest.json
+++ b/manifest.json
@@ -6,10 +6,15 @@
 
   "permissions": [
     "storage",
-    "activeTab"
+    "activeTab",
+    "scripting"
   ],
 
   "host_permissions": [
+    "<all_urls>"
+  ],
+
+  "optional_host_permissions": [
     "https://chat.openai.com/*",
     "https://chatgpt.com/*",
     "https://claude.ai/*",
@@ -25,14 +30,7 @@
 
   "content_scripts": [
     {
-      "matches": [
-        "https://chat.openai.com/*",
-        "https://chatgpt.com/*",
-        "https://claude.ai/*",
-        "https://gemini.google.com/*",
-        "https://www.perplexity.ai/*",
-        "https://aistudio.google.com/*"
-      ],
+      "matches": ["<all_urls>"],
       "js": ["dist/content.js"],
       "css": ["assets/styles/inline-ui.css"],
       "run_at": "document_idle",
