--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,17 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
+yarn.lock
 
 # Build output
 dist/
 build/
 *.crx
+*.xpi
 *.pem
 *.zip
+out/
 
 # IDE
 .vscode/
@@ -17,6 +21,8 @@ build/
 *.swp
 *.swo
 *~
+*.sublime-workspace
+*.sublime-project
 
 # OS
 .DS_Store
@@ -26,6 +32,7 @@ Thumbs.db
 .env
 .env.local
 .env.production
+.env.*.local
 
 # Testing
 coverage/
@@ -35,3 +42,8 @@ coverage/
 *.tmp
 *.temp
 .cache/
+*.log
+
+# macOS
+.AppleDouble
+.LSOverride
